<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellow" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="Welcome to use NKG USB Camera!"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:layout_gravity="center"
        android:src="@mipmap/nkg_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:text="@string/text_author"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:textSize="14sp"
        android:text="@string/text_email"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/text_last_modify"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="20dp"
        android:layout_weight="1"/>
</LinearLayout>